# microservices

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  TESTING.md  app.py  chado_to_redis.py  compose.yml  db.py  docker-compose.prod.yml  docker-compose.yml  query_string_parser.py  requirements.txt
chromosome_region/: .gitignore  Dockerfile  README.md  grpc_server.py  http_server.py  microservice.py  request_handler.py  requirements.txt  setup.cfg  setup.py
chromosome_region/chromosome_region/: __init__.py  __main__.py  commands.py  database.py  grpc_server.py  http_server.py  request_handler.py
chromosome_region/chromosome_region/proto/: __init__.py
chromosome_region/chromosome_region/services/: chromosomeregion_pb2.py  chromosomeregion_pb2_grpc.py
chromosome_region/proto/: chromosomeregion.proto
chromosome_region/services/: chromosomeregion_pb2.py  chromosomeregion_pb2_grpc.py
chromosome_region/structures/: region_pb2.py
dscensor/: Dockerfile  INSTALL  MANIFEST.in  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  requirements.txt  setup.cfg  setup.py  test.py
dscensor/dscensor/: __init__.py  __main__.py  app.py  directed_graph.py  http_server.py  request_handler.py  settings.py  views.py
dscensor/dscensor/api/: dscensor.yaml
fasta_api/: Dockerfile  MANIFEST.in  README.md  compose.dev.yaml  compose.dev.yml  compose.prod.yml  compose.yaml  requirements.txt  setup.cfg  setup.py  test.py
fasta_api/fasta_api/: __main__.py  http_server.py  request_handler.py
gene_search/: .gitignore  Dockerfile  README.md  grpc_server.py  http_server.py  microservice.py  request_handler.py  requirements.txt  setup.cfg  setup.py
gene_search/gene_search/: __init__.py  __main__.py  commands.py  database.py  grpc_server.py  http_server.py  request_handler.py
gene_search/gene_search/services/: genesearch_pb2_grpc.py
gene_search/proto/: genesearch.proto
gene_search/services/: genesearch_pb2_grpc.py
genes/: .gitignore  Dockerfile  README.md  database.py  genes.proto  genes_pb2.py  genes_pb2_grpc.py  grpc_server.py  http_server.py  microservice.py  request_handler.py  requirements.txt  setup.cfg  setup.py
genes/genes/: __init__.py  __main__.py  commands.py  database.py  grpc_server.py  http_server.py  request_handler.py
genes/genes/services/: genes_pb2.py  genes_pb2_grpc.py
genes/services/: genes_pb2.py  genes_pb2_grpc.py
genes/structures/: gene_pb2.py
linkouts/: Dockerfile  INSTALL  README.md  compose.dev.yml  compose.prod.yml  requirements.txt  setup.cfg  setup.py
linkouts/linkouts/: __init__.py  __main__.py  http_server.py  request_handler.py
macro_synteny_blocks/: .gitignore  Dockerfile  Dockerfile.test  README.md  compose.test.yml  grpc_client.py  grpc_server.py  http_server.py  macrosyntenyblocks.proto  macrosyntenyblocks_pb2.py  macrosyntenyblocks_pb2_grpc.py  microservice.py  pairwisemacrosyntenyblocks_pb2.py  pytest.ini  request_handler.py  requirements-test.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py
macro_synteny_blocks/macro_synteny_blocks/: .http_server.py.swp  __init__.py  __main__.py  aioredisearch.py  commands.py  database.py  grpc_client.py  grpc_server.py  http_server.py  request_handler.py
macro_synteny_blocks/macro_synteny_blocks/services/: macrosyntenyblocks_pb2.py  macrosyntenyblocks_pb2_grpc.py  pairwisemacrosyntenyblocks_pb2.py  pairwisemacrosyntenyblocks_pb2_grpc.py
macro_synteny_blocks/services/: macrosyntenyblocks_pb2.py  macrosyntenyblocks_pb2_grpc.py  pairwisemacrosyntenyblocks_pb2.py
macro_synteny_blocks/structures/: block_pb2.py
macro_synteny_blocks/tests/: conftest.py  test_request_handler.py
macro_synteny_paf/: DATA-SPEC.md  Dockerfile  Dockerfile.test  INSTALL  MANIFEST.in  README.md  compose.test.yml  pytest.ini  requirements.txt  run-tests.sh  setup.cfg  setup.py
macro_synteny_paf/macro_synteny_paf/: __init__.py  __main__.py  aioredisearch.py  commands.py  database.py  grpc_client.py  grpc_server.py  http_server.py  request_handler.py
macro_synteny_paf/macro_synteny_paf/proto/: __init__.py
macro_synteny_paf/tests/: conftest.py  test_request_handler.py
micro_synteny_search/: .gitignore  Dockerfile  README.md  grpc_server.py  http_server.py  microservice.py  microsyntenysearch.proto  microsyntenysearch_pb2.py  microsyntenysearch_pb2_grpc.py  request_handler.py  requirements.txt  setup.cfg  setup.py
micro_synteny_search/micro_synteny_search/: __init__.py  __main__.py  aioredisearch.py  commands.py  database.py  grpc_server.py  http_server.py  request_handler.py
micro_synteny_search/services/: microsyntenysearch_pb2.py  microsyntenysearch_pb2_grpc.py
micro_synteny_search/structures/: microtrack_pb2.py
pairwise_macro_synteny_blocks/: .gitignore  Dockerfile  Dockerfile.test  README.md  compose.test.yml  grpc_server.py  http_server.py  metrics.py  pairwisemacrosyntenyblocks.proto  pairwisemacrosyntenyblocks_pb2_grpc.py  pytest.ini  request_handler.py  requirements.txt  run-tests.sh  setup.cfg  setup.py
pairwise_macro_synteny_blocks/pairwise_macro_synteny_blocks/: __init__.py  __main__.py  commands.py  database.py  grpc_server.py  http_server.py  metrics.py  request_handler.py
pairwise_macro_synteny_blocks/proto/: pairwisemacrosyntenyblocks.proto
pairwise_macro_synteny_blocks/services/: pairwisemacrosyntenyblocks_pb2.py  pairwisemacrosyntenyblocks_pb2_grpc.py
pairwise_macro_synteny_blocks/structures/: block_pb2.py
pairwise_macro_synteny_blocks/tests/: conftest.py  test_metrics.py  test_request_handler.py
redis_loader/: Dockerfile  MANIFEST.in  README.md  entrypoint.sh  requirements.txt  setup.cfg
redis_loader/docker-entrypoint-initdb.d/: load.sh.sample
redis_loader/redis_loader/: __init__.py  __main__.py
redis_loader/redis_loader/loaders/: __init__.py  chado.py  (+2 more)
sequences/: Dockerfile  INSTALL  MANIFEST.in  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  requirements.in  requirements.txt  setup.cfg  setup.py  test.py  test_fasta.py
sequences/sequences/: __main__.py  clients.py  commands.py  fasta.py  http_server.py  request_handler.py
(+199 files in other folders)
