# setup.cfg
[metadata]
name = dscensor
version = attr: dscensor.__version__
description = DSCensor CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Connor Cameron
author_email = ctc@ncgr.org
url = https://github.com/legumeinfo/microservices
license = Apache-2.0

[options]
packages = find:
include_package_data = true
install_requires =
    aiohttp
    rororo
    pyyaml
    networkx

[options.entry_points]
console_scripts =
    dscensor = dscensor.__main__:create_app