[metadata]
name = dscensor
version = attr: dscensor.__version__
description = A Microservice that provides data for the DSCensor Web App
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Connor Cameron
author_email = ctc@ncgr.org
keywords = genomics, bioinformatics, microservices
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices
[options]
include_package_data = true
packages = find:
python_requires = >=3.10,<4
install_requires =
    aiohttp
    aiohttp-cors
    networkx
    pyyaml
    uvloop
[options.entry_points]
console_scripts =
    dscensor = dscensor.__main__:main
