[metadata]
name = fasta_api
version = attr: fasta_api.__version__
description = A Microservice that takes a list of gene identifiers and returns their corresponding hyperlink info
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Connor Cameron
author_email = ctc@ncgr.org
keywords = genomics, bioinformatics, microservices
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
python_requires = >=3.5,<4
install_requires =
    aiohttp
    aiohttp-cors
    uvloop
    pyyaml

[options.entry_points]
console_scripts =
    fasta_api = fasta_api.__main__:main
