[metadata]
name = linkouts
version = attr: linkouts.__version__
description = A Microservice that takes a list of gene identifiers and returns their corresponding hyperlink info
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Andrew Farmer
author_email = adf@ncgr.org
keywords = genomics, bioinformatics, microservices
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
python_requires = >=3.5,<4
install_requires =
    aiohttp >=3.7,<4
    aiohttp-cors
    uvloop >=0.16,<1
    pyyaml >= 5.4.1,< 6

[options.entry_points]
console_scripts =
    chromosome = linkouts.__main__:main
