[metadata]
name = macro_synteny_paf
version = attr: macro_synteny_paf.__version__
description = A Microservice that returns pairwise macro-synteny blocks between all chromosomes of a query genome and a target genome, in PAF format
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Sven Redsun
author_email = sgr@ncgr.org
keywords = genomics, bioinformatics, microservices, redis, chado, gff, paf
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
python_requires = >=3.7,<4
install_requires =
    aiohttp
    aiohttp-cors
    grpcio
    grpcio-tools
    redis
    uvloop

[options.entry_points]
console_scripts =
    chromosome = macro_synteny_paf.__main__:main
