[metadata]
name = micro_synteny_search
version = attr: micro_synteny_search.__version__
description = A Microservice that returns micro-tracks with gene family content similar to the query track
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Alan Cleary
author_email = acleary@gncgr.org
keywords = genomics, bioinformatics, microservices, redis, chado, gff
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
python_requires = >=3.7,<4
install_requires =
    aiohttp
    aiohttp-cors
    grpcio
    grpcio-tools
    redis
    uvloop

[options.entry_points]
console_scripts =
    chromosome = micro_synteny_search.__main__:main
