[metadata]
name = pairwise_macro_synteny_blocks
version = attr: pairwise_macro_synteny_blocks.__version__
description = A Microservice that returns pairwise macro-synteny blocks between two chromosomes
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Alan Cleary
author_email = acleary@gncgr.org
keywords = genomics, bioinformatics, microservices, redis, chado, gff
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
python_requires = >=3.5,<4
install_requires =
    aiohttp >=3.7,<4
    aiohttp-cors
    grpcio >=1.39,<2
    grpcio-tools >=1.39,<2
    redis >=4.3.4,<5
    uvloop >=0.16,<1

[options.entry_points]
console_scripts =
    chromosome = pairwise_macro_synteny_blocks.__main__:main
