[metadata]
name = redis_loader
version = attr: redis_loader.__version__
description = A Redis loader for Legume Information System microservices
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Alan Cleary
author_email = acleary@gncgr.org
keywords = genomics, bioinformatics, microservices, redis, chado, gff
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
python_requires = >=3.12, <4
install_requires =
    pyranges1
    psycopg2
    redis

[options.entry_points]
console_scripts =
    redis_loader = redis_loader.__main__:main
