[metadata]
name = sequences
version = attr: sequences.__version__
description = A Microservice that takes a list of gene IDs and returns their protein, CDS, or genomic sequences as a single FASTA file
long_description = file: README.md
url = https://github.com/legumeinfo/microservices
author = Matt Wiese
author_email = hello@mattwie.se
keywords = genomics, bioinformatics, microservices, fasta, sequence
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Reports = https://github.com/legumeinfo/microservices/issues
    Source = https://github.com/legumeinfo/microservices


[options]
packages = find:
include_package_data = True
python_requires = >=3.9,<4
install_requires =
    aiohttp
    aiohttp-cors
    grpcio
    grpcio-tools
    uvloop

[options.package_data]
sequences = openapi/sequences/v1/*.yaml

[options.entry_points]
console_scripts =
    sequences = sequences.__main__:main
